font and base colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root[data-bs-theme="dark"] {
+    --bs-body-bg: #332204;
+    --bs-body-color: #f5e5e7;      
+    --bs-primary: #e7f0a5;         
+    --bs-secondary: #576121;
+    --bs-border-color: #f06870;
+}
 * {
     box-sizing: content-box;
     margin: 0;
@@ -5,9 +12,13 @@
 }
 
 body {
-    background-color: #222;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #222;
+    background-color: #332204;
+    font-family: 'Manjari', sans-serif;
+    color: #f5e5e7;
+}
+
+.title-font {
+    font-family: 'Gayathri', sans-serif;
 }
 
 .container {
