--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
     font-family: 'Gayathri', sans-serif;
 }
 
+.header {
+    text-align: center;
+    padding: 20px;
+}
+
 .container {
     width: 80%;
     margin: auto;
