--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,55 @@ border-bottom: none;
     transition: ease-in-out;
     cursor: pointer;
 }
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    min-height: 150px;
+    align-items: center;
+}
+
+footer .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 1.5rem;
+}
+
+.redes {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.redes a {
+    color: #f5e5e7;
+    font-size: 1.8rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.redes a:hover {
+    color: #e7f0a5;
+  }
+
+.email-input {
+    font-family: 'Manjari', sans-serif;
+    padding: 6px 18px;
+    border: none;
+    border-radius: 8px;
+    margin-right: 10px;
+}
+.suscribe-button {
+    background-color: #e7f0a5;
+    padding: 6px 18px;
+    color: #332204;
+    border-radius: 8px;
+    border: none;
+    font-family: 'Manjari', sans-serif;
+}
+
+.suscribe-button:hover {
+    background-color: #576121;
+    color: #f5e5e7;
+    border-bottom: none;
+}
