--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,228 @@ footer .logo {
 .mapa {
     overflow: hidden;
 }
+
+.parent-main-blog-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    min-height: 50vh;
+    margin-top: 50px;
+}
+.parent-next-blog-grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(4,1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    min-height: 50vh;
+    flex-grow: 2;
+}
+    
+    .blog1 { grid-area: 1 / 1 / 3 / 3; }
+    .blog2 { grid-area: 1 / 3 / 2 / 4; }
+    .blog3 { grid-area: 2 / 3 / 3 / 4; }
+    .blog4 { grid-area: 1 / 1 / 2 / 2; 
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    }
+.blog5 { 
+    grid-area: 1 / 2 / 2 / 3;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); 
+}
+.blog6 { 
+    grid-area: 2 / 1 / 3 / 2;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+ }
+.blog7 { 
+    grid-area: 2 / 2 / 3 / 3;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog8 { 
+    grid-area: 3 / 1 / 4 / 2; 
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog9 { 
+    grid-area: 3 / 2 / 4 / 3; 
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog10 { 
+    grid-area: 4 / 1 / 5 / 2;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog11 { 
+    grid-area: 4 / 2 / 5 / 3; 
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog12 { 
+    grid-area: 5 / 1 / 6 / 2;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog13 { 
+    grid-area: 5 / 2 / 6 / 3;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); 
+}
+.blog14 { grid-area: 6 / 1 / 7 / 2; 
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog15 { 
+    grid-area: 6 / 2 / 7 / 3;
+    background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+    url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); 
+}
+
+.blog {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border-radius: 10px;
+    padding: 2rem;
+    color: #f5e5e7;
+}
+.blog1 {
+    background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog2 {
+    background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+.blog3 {
+    background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+
+.blog-section-2 {
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    gap: 50px;
+    align-items: flex-start;
+}
+.categories {
+    margin-top: 50px;
+    flex-grow: 1;
+}
+
+.categories ul{
+    list-style: none;
+}
+.categories a {
+    text-decoration: none;
+    color: #576121;
+    font-weight: 800;
+}
+
+.categories a:hover {
+    color: #c85e49;
+}
+
+aside {
+    width: 20%;
+    background-color: #332204;
+    color: #f5e5e7;
+    height: 100vh;
+}
+.user-info {
+    display: flex;
+    gap: 8px;
+    padding: 2rem;
+    align-items: center;
+}
+
+.user-info img {
+    border-radius: 50%;
+}
+
+aside a {
+    text-decoration: none;
+    color: #f5e5e7;
+    margin: 10px;
+}
+
+.cuenta-container {
+    display: flex;
+}
+
+.cuenta-main {
+    padding: 40px;
+    width: 100%;
+}
+
+article {
+    padding: 20px;
+}
+
+.proyectos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    }
+    
+    .proyecto1 { 
+        grid-area: 1 / 1 / 2 / 2;
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+     }
+    .proyecto2 { 
+        grid-area: 1 / 2 / 2 / 3; 
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");}
+    .proyecto3 { 
+        grid-area: 1 / 3 / 2 / 4;
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+     }
+    .proyecto4 { 
+        grid-area: 2 / 1 / 3 / 2; 
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    }
+    .proyecto5 { 
+        grid-area: 2 / 2 / 3 / 3;
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"); 
+    }
+    .proyecto6 { 
+        grid-area: 2 / 3 / 3 / 4; 
+        background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 60%),
+        url("https://images.pexels.com/photos/31446183/pexels-photo-31446183/free-photo-of-logging.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    }
